[Offline pages]: Implement background loader to save on last retry, and record last retry success UMA separately

BUG=705090

Review-Url: https://codereview.chromium.org/2818783002
Cr-Commit-Position: refs/heads/master@{#465088}

Former-commit-id: 3bcd8469054bf76be2008630904f4e2f9ba146e1